Added slightly more features, for finding vanishing point.

--- a/lines_config.yaml
+++ b/lines_config.yaml
@@ -8,11 +8,15 @@ shape:
     - [[0.0,5.0], 1.0]
     - [[5.0,5.0], 0.5]
 
-roi:
+evidence_roi:
   - [1000,550]
   - [1800,550]
   - [1800,1000]
   - [1000,1000]
+
+vanish_roi:
+  xlim: [900,1100]
+  ylim: [450,650]
 
 edge_detection:
   param1: 0
